@@ -14,11 +14,12 @@ import otus.service.domenservice.BookService;
 import otus.service.domenservice.CommentService;
 import otus.service.ioservice.IOService;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @SpringBootTest
 class CommentServiceTest {
@@ -37,16 +38,17 @@ class CommentServiceTest {
     public void setUp() {
         expectedBook = new Book(1L, "test",
                 new Author(1L, "1", "1"),
-                new Genre(1L, "1"));
+                new Genre(1L, "1"),
+                null);
         expected = new Comment("test", expectedBook);
     }
 
     @Test
     void saveComment() {
         when(ioService.getString()).thenReturn("test");
-        when(bookService.getBook()).thenReturn(expectedBook);
+        when(bookService.getBook(1L)).thenReturn(expectedBook);
         when(commentDAO.save(expected)).thenReturn(expected);
-        Comment actual = commentService.saveComment();
+        Comment actual = commentService.saveComment("test", expectedBook);
         assertEquals(expected, actual);
     }
 
@@ -55,20 +57,28 @@ class CommentServiceTest {
         expected.setId(1L);
         when(ioService.getLong()).thenReturn(1L);
         when(commentDAO.getById(1L)).thenReturn(Optional.of(expected));
-        Comment actual = commentService.getCommentById();
+        Comment actual = commentService.getComment(1L);
         assertEquals(expected, actual);
     }
 
     @Test
-    void getAllCommentByBookId() {
-        expected.setId(1L);
-        when(ioService.getLong()).thenReturn(1L);
-        when(commentDAO.getAllByBookId(1L)).thenReturn(List.of(expected));
-        when(commentDAO.getById(1L)).thenReturn(Optional.of(expected));
-        List<Comment> actual = commentService.getAllCommentByBookId();
-        assertEquals(1, actual.size());
-        assertEquals(expected, actual.get(0));
+    void getAllComment() {
+        when(commentDAO.getAll()).thenReturn(Collections.singletonList(expected));
+        List<Comment> allComment = commentService.getAllComment();
+        assertEquals(1, allComment.size());
+        assertEquals(expected, allComment.get(0));
     }
+
+//    @Test
+//    void getAllCommentByBookId() {
+//        expected.setId(1L);
+//        when(ioService.getLong()).thenReturn(1L);
+//        when(commentDAO.getAllByBookId(1L)).thenReturn(List.of(expected));
+//        when(commentDAO.getById(1L)).thenReturn(Optional.of(expected));
+//        List<Comment> actual = commentService.getAllCommentByBookId();
+//        assertEquals(1, actual.size());
+//        assertEquals(expected, actual.get(0));
+//    }
 
     @Test
     void updateComment() {
@@ -76,19 +86,18 @@ class CommentServiceTest {
         when(ioService.getLong()).thenReturn(1L);
         when(commentDAO.getById(1L)).thenReturn(Optional.of(expected));
         expected.setId(1L);
-        when(bookService.getBook()).thenReturn(expectedBook);
+        when(bookService.getBook(1L)).thenReturn(expectedBook);
         when(commentDAO.update(expected)).thenReturn(expected);
-        Comment comment = commentService.updateComment();
+        Comment comment = commentService.updateComment(expected);
         assertEquals(expected, comment);
     }
 
     @Test
     void deleteComment() {
         when(ioService.getLong()).thenReturn(1L);
-        when(commentDAO.deleteById(1L)).thenReturn(1L);
         expected.setId(1L);
         when(commentDAO.getById(1L)).thenReturn(Optional.of(expected));
-        long actual = commentService.deleteComment();
-        assertEquals(1, actual);
+        commentService.deleteComment(expected);
+        verify(commentDAO, times(1)).deleteById(1L);
     }
 }
